--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>mielpino</title>
-    <meta name="description" content="Lovable Generated Project" />
+    <title>agropino</title>
+    <meta name="description" content="Pino and his homemade bio-products" />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="mielpino" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="agropino" />
+    <meta property="og:description" content="Pino and his homemade bio-products" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://unsplash.com/it/foto/margherita-bianca-in-fiore-durante-il-giorno-3tYZjGSBwbk" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://unsplash.com/it/foto/margherita-bianca-in-fiore-durante-il-giorno-3tYZjGSBwbk" />
   </head>
 
   <body>
