--- a/index.html
+++ b/index.html
@@ -5,17 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>agropino</title>
     <meta name="description" content="Pino and his homemade bio-products" />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="https://www.github.com/fdp7" />
 
     <meta property="og:title" content="agropino" />
     <meta property="og:description" content="Pino and his homemade bio-products" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://unsplash.com/it/foto/margherita-bianca-in-fiore-durante-il-giorno-3tYZjGSBwbk" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://unsplash.com/it/foto/margherita-bianca-in-fiore-durante-il-giorno-3tYZjGSBwbk" />
-  </head>
+</head>
 
   <body>
     <div id="root"></div>
